# ArrowGame

./: #main.c#  .gitignore  .gitmodules  CMakeLists.txt  Differences.txt  Programmer's documentation.odt  Specification.odt  Todolist.txt  main.c
.github/workflows/: cmake-multi-platform.yml
Menus/: CMakeLists.txt  GConfMenu.c  GConfMenu.h  GcfgMenu.c  GcfgMenu.h  GraphicsMenu.c  GraphicsMenu.h  IPlayerSelector.c  IPlayerSelector.h  InputMenu.c  InputMenu.h  MainMenu.c  MainMenu.h  OptionsMenu.c  OptionsMenu.h  PauseMenu.c  PauseMenu.h  WinMenu.c  WinMenu.h
Release/: ArrowGame
Release/Config/: default.icfg  graphics.cfg  player0.icfg  player1.icfg
src/: CMakeLists.txt  arrow.c  arrow.h  bullet.c  bullet.h  game.c  game.h  gcfg.c  gcfg.h  particle.c  particle.h  weapon.c  weapon.h
src/control/: CMakeLists.txt  input.c  input.h  random.c  random.h
src/dataStructures/: BulletPasta.c  BulletPasta.h  CMakeLists.txt  ParticlePasta.c  ParticlePasta.h  tészta.h
src/graphics/: CMakeLists.txt  color.c  color.h  graphics.c  graphics.h
src/math/: CMakeLists.txt  lerp.c  lerp.h  vector.c  vector.h
src/menu/: CMakeLists.txt  menu.c  menu.h  menuelements.c  menuelements.h  menuentry.c  menuentry.h  textrenderer.c  textrenderer.h
